Add base for GStreamerDownloader. Little cleanup