@@ -1,30 +1,49 @@
 package ru.l0sty.frogdisplays.util;
 
+import me.inotsleep.utils.LoggerFactory;
+import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.texture.NativeImage;
 import net.minecraft.client.texture.NativeImageBackedTexture;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.CompletableFuture;
+import java.util.logging.Level;
 
 public class ImageUtil {
 
     public static CompletableFuture<NativeImageBackedTexture> fetchImageTextureFromUrl(String url) {
-        System.out.println("Loading image from " + url);
-        return CompletableFuture.supplyAsync(() -> {
+        CompletableFuture<NativeImage> imageFuture = CompletableFuture.supplyAsync(() -> {
             try {
-                BufferedImage bufferedImage = ImageIO.read(new URL(url));
-                if (bufferedImage == null) throw new IOException("Failed to decode image: " + url);
-
-                NativeImage nativeImage = convertToNativeImage(bufferedImage);
-                return new NativeImageBackedTexture(nativeImage);
-            } catch (IOException e) {
-                e.printStackTrace();
+                BufferedImage bi = ImageIO.read(URL.of(URI.create(url), null));
+                if (bi == null) {
+                    throw new IOException("Failed to decode image: " + url);
+                }
+                return convertToNativeImage(bi);
+            } catch (Exception e) {
+                LoggerFactory.getLogger().log(Level.SEVERE, "Failed to load image from " + url, e);
                 return null;
             }
+        });
+
+        return imageFuture.thenCompose(nativeImage -> {
+            CompletableFuture<NativeImageBackedTexture> texFuture = new CompletableFuture<>();
+
+            MinecraftClient.getInstance().execute(() -> {
+//                RenderSystem.queueFencedTask(() -> {
+                    try {
+                        NativeImageBackedTexture tex = new NativeImageBackedTexture(() -> url, nativeImage);
+                        texFuture.complete(tex);
+                    } catch (Throwable t) {
+                        texFuture.completeExceptionally(t);
+                    }
+                });
+//            });
+
+            return texFuture;
         });
     }
 
